2012-12-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_reporting.php: cleaned source code style.

2012-12-27 Miguel de Dios <miguel.dedios@artica.es>
	
	* install.php: cleaned source code style.
	
	* godmode/reporting/reporting_builder.item_editor.php,
	godmode/reporting/reporting_builder.list_items.php,
	include/styles/pandora.css, include/functions_reporting.php: fixed
	the "group_report" and the inventory.

2012-12-27  Hirofumi Kosaka  <kosaka@rworks.jp>

	* general/logon_ok.php: Fixed typo. (fixed a bug that the
	number of "Alerts defined" at Pandora Main Page showed always "-")

2012-12-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_modules.php
	include/functions_network_components.php
	extensions/module_groups.php
	godmode/extensions.php
	godmode/agentes/configurar_agente.php
	godmode/servers/recon_script.php
	godmode/servers/plugin.php
	godmode/servers/manage_recontask.php
	godmode/alerts/alert_compounds.php
	godmode/alerts/alert_templates.php
	godmode/alerts/alert_actions.php
	godmode/alerts/alert_commands.php
	godmode/setup/os.list.php
	godmode/setup/news.php
	godmode/setup/links.php
	godmode/users/profile_list.php
	godmode/gis_maps/index.php
	godmode/modules/manage_network_templates.php
	godmode/modules/manage_network_components.php
	godmode/modules/manage_nc_groups.php: Fixed some bugs and remove 
	error messages when views are empty.

2012-12-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Create latest configuration
	token when not exist

2012-12-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Store the new configuration
	of inventory changes blacklist when update setup 

2012-12-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	include/functions_events.php
	include/functions_reporting.php
	include/functions_agents.php
	extensions/net_tools.php
	extensions/agents_modules.php
	extensions/users_connected.php