@@ -1,5 +1,10 @@
 2012-12-27 Miguel de Dios <miguel.dedios@artica.es>
 	
+	* godmode/reporting/reporting_builder.item_editor.php: fixed the
+	dates of inventory thank to Juan Manuel Ramon.
+
+2012-12-27 Miguel de Dios <miguel.dedios@artica.es>
+	
 	* include/functions_reporting.php: cleaned source code style.
 
 2012-12-27 Miguel de Dios <miguel.dedios@artica.es>
